Fixed scrollbar height

--- a/src/app/styl/misc.styl
+++ b/src/app/styl/misc.styl
@@ -17,6 +17,7 @@ scrollable()
         width: 5px;
 
     &::-webkit-scrollbar-track
+        margin-top: HeaderHeight
         background-color: #30333c
 
     &::-webkit-scrollbar-thumb
