--- a/src/app/styl/movie_browser/movie_list.styl
+++ b/src/app/styl/movie_browser/movie_list.styl
@@ -1,13 +1,12 @@
 .movie-list
-    height: MovieListPadding
-    margin-top: HeaderHeight
-
+    height: 100%
     width: 100%
     fixed: top left
 
     scrollable()
 
     .movies
+        padding-top: HeaderHeight
         -webkit-user-select: none;
 
     .error
