--- a/src/app/styl/title_bar.styl
+++ b/src/app/styl/title_bar.styl
@@ -21,7 +21,6 @@
         &.darwin
           position: absolute;
           left: 15px;
-          top: 17px;
 
         &.fs-darwin
           right: 7px;
@@ -32,7 +31,6 @@
         &.linux
           right: 7px;
           left: initial;
-          top: 15px;
 
         &.fs-win32,
         &.fs-linux
